--- a/style.css
+++ b/style.css
@@ -17,7 +17,9 @@ main{
 }
 main section{
     width: 100%;
-    padding: var(--padding-2xl);
+    padding: var(--padding-lg);
+    display: flex;
+    gap: var(--gutter-2xl);
 }
 main section .top {
     display: flex;
@@ -42,6 +44,17 @@ main section .left{
 }
 main section .right{
     width: 40%;
+    display: flex;
+    flex-direction: column;
+    gap: var(--gutter-md);
+    background-color: var(--bg-secondary-color);
+    padding: var(--padding-lg);
+    border-radius: var(--border-radius-lg);
+}
+main section .right .filters{
+    display: flex;
+    flex-direction: column;
+    gap: var(--gutter-md);
 }
 main section .bottom{
     display:flex ;
@@ -57,18 +70,41 @@ main section .bottom .placeholder{
     display: flex;
     flex-direction: column;
     align-items: center;
+    opacity: 0.6;
+    gap: var(--gutter-md);
 }
 main section .bottom .placeholder i{
     font-size: var(--font-size-2xl)
 }
 
+main section .bottom .placeholder p{
+    font-size: var(--font-size-lg);
+}
 
+main section .right .filter{
+    width: 100%;
+}
+main section .right .filter input{
+    width: 100%;
+    outline: none;
+    margin-top: var(--margin-sm);
+    appearance: none;
+}
+main section .right .filter input::-webkit-slider-thumb{
+    cursor: pointer;
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    margin: -8.5px;
+    border-radius: 50%;
+    background-color: red;
+}
 
-
-
-
-
-
+main section .right .filter input::-webkit-slider-runnable-track{
+    background-color: var(--bg-active-color);
+    height: 3px;
+    border-radius: 2px;
+}
 
 
 
